// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tab navs click test 1`] = `
<div>
  <div
    class="ofa-tab-navs-wrapper"
  >
     
    <div
      class="ofa-tab-navs tab-click-test-className"
    >
      <div
        class="cursor-pointer relative ofa-tab-nav-item"
      >
        tab1
      </div>
      <div
        class="cursor-pointer relative ofa-tab-nav-item tab-click-test-active-className tab-nav__error"
      >
        tab2
      </div>
      <div
        class="cursor-pointer relative ofa-tab-nav-item tab-nav__warning"
      >
        tab3
      </div>
      <div
        class="cursor-pointer relative ofa-tab-nav-item disabled tab-nav__error"
      >
        tab4
      </div>
    </div>
  </div>
</div>
`;

exports[`tab navs props test 1`] = `
<div>
  <div
    class="ofa-tab-navs-wrapper"
  >
     
    <div
      class="ofa-tab-navs test-className"
      style="background-color: red; width: 80%; height: 50px;"
    >
      <div
        class="cursor-pointer relative ofa-tab-nav-item test-navs-className"
      >
        tab1
      </div>
      <div
        class="cursor-pointer relative ofa-tab-nav-item test-active-className tab-nav__error test-navs-className"
      >
        tab2
      </div>
      <div
        class="cursor-pointer relative ofa-tab-nav-item tab-nav__warning test-navs-className"
      >
        tab3
      </div>
      <div
        class="cursor-pointer relative ofa-tab-nav-item disabled tab-nav__error test-navs-className"
      >
        tab4
      </div>
    </div>
  </div>
</div>
`;

exports[`tab props test 1`] = `
<div>
  <div
    class="ofa-tab-wrapper ofa-tab-direction__horizon test-className"
    style="max-height: 500px;"
  >
    <div
      class="ofa-tab-navs-wrapper"
    >
       
      <div
        class="ofa-tab-navs"
      >
        <div
          class="cursor-pointer relative ofa-tab-nav-item test-active-className test-navs-className"
        >
          tab1
        </div>
        <div
          class="cursor-pointer relative ofa-tab-nav-item tab-nav__error test-navs-className"
        >
          tab2
        </div>
        <div
          class="cursor-pointer relative ofa-tab-nav-item tab-nav__warning test-navs-className"
        >
          tab3
        </div>
        <div
          class="cursor-pointer relative ofa-tab-nav-item disabled tab-nav__error test-navs-className"
        >
          tab4
        </div>
      </div>
    </div>
    <div
      class="ofa-tab-content"
    >
      tab1 content
    </div>
  </div>
</div>
`;
